tabs: fix anchors in tabs and align tab content with non-tabbed fieldsets

--- a/webclient/public/stylesheets/jquery-ui-1.7.2.custom-tabs.css
+++ b/webclient/public/stylesheets/jquery-ui-1.7.2.custom-tabs.css
@@ -38,6 +38,7 @@
 .fieldset-group.ui-tabs .ui-tabs-nav li a {
   padding-top: 0;
   padding-bottom: 0;
+  border: 0 none transparent;
 }
 
 .fieldset-group .ui-tabs-nav .ui-state-default,
@@ -64,4 +65,9 @@
 
 .fieldset-group.ui-widget-content {
   background: transparent;
+}
+
+.fieldset-group.ui-tabs .ui-tabs-panel {
+  padding-left: 8px;
+  padding-right: 8px;
 }
